--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -25,7 +25,7 @@
                     <thead>
                         <tr>
                         <th scope="col"><p class="text-center">Línea</p></th>
-                        <th scope="col"><p class="text-center">Nombre del articulo</p></th>
+                        <th scope="col"><p class="text-center">Nombre del artículo</p></th>
                         <!-- <th scope="col"><p class="text-center">Fecha pedido</p></th> -->
                         <!-- <th scope="col"><p class="text-center">Fecha factura</p></th> -->
                         <th scope="col"><p class="text-center">Unidades pedido</p></th>
