--- a/app/comps/perfil/perfil.html
+++ b/app/comps/perfil/perfil.html
@@ -7,7 +7,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Cambiar Contraseña</h4>
+        <h4 class="modal-title">Cambiar contraseña</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 
       </div>
@@ -17,7 +17,7 @@
 
           <div class="row">
             <div class="col-sm-12 ">
-              <p class="text-left">Utilice el siguiente formulario para cambiar su contraseña</p>
+              <p class="text-justify">Utilice el siguiente formulario para cambiar su contraseña</p>
               <form method="post" id="passwordForm">
                 <input type="password" class="input-lg form-control" ng-model="newPass" name="password1" id="password1" placeholder="Contraseña nueva" autocomplete="off">
                 <div class="row">
