--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -126,7 +126,7 @@
               <th scope="col"><p class="text-center">Categoría</p></th>
               <th scope="col"><p class="text-center">Existencia</p></th>
               <th scope="col"><p class="text-center">Precio Bs.S</p></th>
-              <th scope="col"><p class="text-center">Iva Bs.S</p></th>
+              <th scope="col"><p class="text-center">IVA Bs.S</p></th>
               <th scope="col"><p class="text-center">Precio USD</p></th>
               <th scope="col"><p class="text-center">IVA USD</p></th>
               <th scope="col"><p class="text-center">Principio activo</p></th>
