--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -44,7 +44,7 @@
           </table>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-info" style="background: #212529;" data-dismiss="modal">regresar</button>
+        <button type="button" class="btn btn-info" style="background: #212529;" data-dismiss="modal">Regresar</button>
       </div>
     </div>
   </div>
@@ -175,7 +175,7 @@
 
                             <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
                             <th scope="col"><p class="text-center">Saldo Bs.</p></th>
-                            <th scope="col"><p class="text-center">Saldo USD.</p></th>
+                            <th scope="col"><p class="text-center">Saldo USD</p></th>
                           </tr>
                         </thead>
                         <tbody>
