--- a/app/comps/footer/footer.html
+++ b/app/comps/footer/footer.html
@@ -29,7 +29,7 @@
     <div class="col-sm-12 col-md-6">
       <h6>Droguería Del Oeste&nbsp</h6>
       <!-- <p class="text-justify">Scanfcode.com <i>CODE WANTS TO BE SIMPLE </i> is an initiative  to help the upcoming programmers with the code. Scanfcode focuses on providing the most efficient code or snippets as the code wants to be simple. We will help programmers build up concepts in different programming languages that include C, C++, Java, HTML, CSS, Bootstrap, JavaScript, PHP, Android, SQL and Algorithm.</p> -->
-      <p class="text-justify">Estamos orgullosos de contar con un personal altamente capacitado que respalda nuestro rápido y constante crecimiento a nivel nacional, ese mismo que impulso a crear y fundar lo que hoy en día es Droguería del Oeste, C.A.</p>
+      <p class="text-justify">Estamos orgullosos de contar con un personal altamente capacitado que respalda nuestro rápido y constante crecimiento a nivel nacional, ese mismo que impulsó a crear y fundar lo que hoy en día es Droguería del Oeste, C.A.</p>
     </div>
 
     <div class="col-xs-6 col-md-3">
