--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -1147,8 +1147,8 @@
                               <i class="fa fa-eye" style="cursor: pointer;"  ng-click="getPedido(x.ID);" data-toggle="modal" data-target="#showPedidoModal"  ></i>
   
                               <i class="fa fa-clock" style="cursor: pointer;"   ng-show="x.estatus =='PEDIDO EN CONSTRUCCION' || x.estatus =='PEDIDO CREADO' || x.estatus == 'POR PROCESAR'"  ng-click="tiempoPedido(x.ID);"  ></i>
-                              <div ng-show="timerRunning && (x.estatus == 'PEDIDO EN CONSTRUCCION' || x.estatus == 'PEDIDO EN EDICION' ) ">
-                                <timer countdown=" liveTimeOrd" interval="1000">{{countdown}}</timer>
+                              <div ng-if="timerRunning && (x.estatus == 'PEDIDO EN CONSTRUCCION' || x.estatus == 'PEDIDO EN EDICION' ) ">
+                                <timer countdown="liveTimeOrd" interval="1000">{{countdown}}</timer>
                               </div>
                             </td>
                           </tr>
