--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -7,10 +7,10 @@
 <div id="modalImg" class="modal">
 
   <!-- The Close Button -->
-  <span class="close">&times;</span>
+  <span class="my-close">&times;</span>
 
   <!-- Modal Content (The Image) -->
-  <img class="modal-content" id="img01">
+  <img class="my-modal-content" id="img01">
 
   <!-- Modal Caption (Image Text) -->
   <div id="caption"></div>
