--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -4,7 +4,7 @@
   </div>
 
   <!-- The Modal -->
-<div id="modalImg" class="modal">
+<div id="modalImg" class="my-modal">
 
   <!-- The Close Button -->
   <span class="my-close">&times;</span>
