--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -111,7 +111,7 @@
     <div class="col-md-12 col-sm-12">
       <nav aria-label="breadcrumb" role="navigation">
         <ol class="breadcrumb m-0">
-          <li class="breadcrumb-item"><a class="text-success" >servidor.com</a></li>
+          <li class="breadcrumb-item"><a class="text-success" >Droguería del Oeste.com</a></li>
           <li class="breadcrumb-item"><a class="text-info" href="#!/home">Inicio</a></li>
           <li class="breadcrumb-item active" aria-current="page">Pedidos facturados</li>
         </ol>
