--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -832,7 +832,7 @@
             <div class="row pb-2 p-2" >
                 <div class="col-md-4">
                   <p class="font-weight-bold mb-4">Información</p>
-                  <p class="mb-1"><span class="text-muted">Principal activo: </span> {{articulo.princ_activo}}</p>
+                  <p class="mb-1"><span class="text-muted">Principio activo: </span> {{articulo.princ_activo}}</p>
                   <p class="mb-1"><span class="text-muted">Código: </span> {{articulo.cod_producto}}</p>
                   <p class="mb-1"><span class="text-muted">Fecha vencimiento: </span> {{articulo.fecha_vence}}</p>
                   <p class="mb-1"><span class="text-muted">Proveedor: </span> {{articulo.proveedor}}</p>
@@ -1009,7 +1009,7 @@
   
           <nav aria-label="breadcrumb" role="navigation">
             <ol class="breadcrumb m-0">
-              <li class="breadcrumb-item"><a class="text-success" >servidor.com</a></li>
+              <li class="breadcrumb-item"><a class="text-success" >Droguería del Oeste.com</a></li>
               <li class="breadcrumb-item"><a class="text-info" href="#!/home">Inicio</a></li>
               <li class="breadcrumb-item active" aria-current="page">Pedidos</li>
             </ol>
