--- a/app/index.html
+++ b/app/index.html
@@ -146,6 +146,7 @@
   <script type="text/javascript" src="comps/facturado/facturado.js"></script>
   <script type="text/javascript" src="comps/saldo/saldo.js"></script>
   <script type="text/javascript" src="comps/clientes/clientes.js"></script>
+  <script type="text/javascript" src="comps/estadisticas/estadisticas.js"></script>
 
   <script src="bower_components/ngmap/build/scripts/ng-map.min.js"></script>
   <script src="comps/version/version.js"></script>
