--- a/app/comps/clientes/clientes.html
+++ b/app/comps/clientes/clientes.html
@@ -14,7 +14,7 @@
 
       <nav aria-label="breadcrumb" role="navigation">
         <ol class="breadcrumb m-0">
-          <li class="breadcrumb-item"><a class="text-success" >servidor.com</a></li>
+          <li class="breadcrumb-item"><a class="text-success" >Droguería del Oeste.com</a></li>
           <li class="breadcrumb-item"><a class="text-info" href="#!/home">Home</a></li>
           <li class="breadcrumb-item active" aria-current="page">Clientes</li>
         </ol>
