--- a/app/comps/common/topbar.html
+++ b/app/comps/common/topbar.html
@@ -1,5 +1,5 @@
 <div class="" style="height: 60px;" >
-  <nav class="navbar navbar-icon-top navbar-expand-lg navbar-light fixed-top" style="background:#EEF9FE;border-bottom:3px solid #D76F2C;">
+  <nav class="navbar navbar-icon-top navbar-expand-lg navbar-light fixed-top" style="background:#ffffff;border-bottom:3px solid #D76F2C;">
     <a href="#!/" class="navbar-brand" style="color:#000;margin-left:10px">
       <img src="img/logoddo.png" width="280" height="60" class="logo" alt="">
     </a>
