--- a/app/comps/estadisticas/estadisticas.html
+++ b/app/comps/estadisticas/estadisticas.html
@@ -19,7 +19,7 @@
             <ol class="breadcrumb m-0">
               <li class="breadcrumb-item"><a class="text-success" >Droguería del Oeste</a></li>
               <!-- <li class="breadcrumb-item"><a class="text-info" href="#!/home">Home</a></li> -->
-              <li class="breadcrumb-item active" aria-current="page">Inicio</li>
+              <li class="breadcrumb-item active" aria-current="page">Estadísticas</li>
               <li class="breadcrumb-item"><a class="text-info" href="#!/home">{{client_info.nombre_cliente}}</a></li>
 
             </ol>
