--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -1110,7 +1110,7 @@
                     </div>
                     <div class="col-md-6 col-sm-12">
   
-                      <button class="btn btn-warning" style="float: left; font-weight: bold;margin-bottom: 1rem; width: 100%;" ng-click="infoPsico = true;" ng-show="!infoPsico"  > <i class="fa fa-info-circle"></i> Requisitos para psicotrópico</button>
+                      <button class="btn btn-naranja" style="float: left; font-weight: bold;margin-bottom: 1rem; width: 100%;" ng-click="infoPsico = true;" ng-show="!infoPsico"  > <i class="fa fa-info-circle"></i> Requisitos para psicotrópico</button>
                     </div>
   
                     <div class="col-md-6 col-sm-12" ng-show="showProductTable || hasUserClient"  >
@@ -1130,7 +1130,7 @@
                         </button>
                       </div>
   
-                      <div class="alert alert-warning alert-dismissible fade show" ng-show="msgOrdCancel" role="alert">
+                      <div class="alert alert-gris alert-dismissible fade show" ng-show="msgOrdCancel" role="alert">
                         <strong>¡Advertencia!</strong> Dispone de menos de 15 minutos para finalizar su pedido de lo contrario será cancelado por el sistema.
                       </div>
                     </div>
