--- a/app/comps/login/login.html
+++ b/app/comps/login/login.html
@@ -11,9 +11,11 @@
                   <!-- <h5>RS - LogIn</h5> -->
                   <img src="img/logoddo.png" style="width:100%;height:100%" alt="">
                   <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
-                  <div class="form-group"><input class="form-control" type="text" name="username" placeholder="Nombre de usuario" ng-model="user.username"></div>
-                  <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Contraseña" ng-keydown="$event.keyCode === 13 && login()" ng-model="user.password"></div>
-                  <div class="g-recaptcha" data-sitekey="6LeY06oUAAAAANYQWer17SpCoL_JKWQQusxCzS3l"></div>
+
+
+                  <div class="form-group"><input class="form-control" type="text" name="username" style="margin-left: 15px; width: 90% !important;" placeholder="Nombre de usuario" ng-model="user.username"></div>
+                  <div class="form-group"><input class="form-control" type="password" name="password" style="margin-left: 15px; width: 90% !important;" placeholder="Contraseña" ng-keydown="$event.keyCode === 13 && login()" ng-model="user.password"></div>
+                  <div class="g-recaptcha" style="margin-left: 15px; width: 90% !important;" data-sitekey="6LeY06oUAAAAANYQWer17SpCoL_JKWQQusxCzS3l"></div>
                   <div class="form-group"><button class="btn btn-primary btn-block" style="
                     width: 75%;
                     margin: auto;
