--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -833,14 +833,14 @@
                 <div class="col-md-4">
                   <p class="font-weight-bold mb-4">Información</p>
                   <p class="mb-1"><span class="text-muted">Principio activo: </span> {{articulo.princ_activo}}</p>
-                  <p class="mb-1"><span class="text-muted">Código: </span> {{articulo.cod_producto}}</p>
+                  <!-- <p class="mb-1"><span class="text-muted">Código: </span> {{articulo.cod_producto}}</p> -->
                   <p class="mb-1"><span class="text-muted">Fecha vencimiento: </span> {{articulo.fecha_vence}}</p>
                   <p class="mb-1"><span class="text-muted">Proveedor: </span> {{articulo.proveedor}}</p>
                 </div>
   
                 <div class="col-md-4 ">
                     <p class="font-weight-bold mb-4">Detalles</p>
-                    <p class="mb-1" ng-if="clienteEmpleado" ><span class="text-muted">Tipo (empleado): </span> {{articulo.tipo_prod_emp}}</p>
+                    <!-- <p class="mb-1" ng-if="clienteEmpleado" ><span class="text-muted">Tipo (empleado): </span> {{articulo.tipo_prod_emp}}</p> -->
                     <p class="mb-1"><span class="text-muted">Regulado: </span> {{articulo.ind_regulado}}</p>
                     <p class="mb-1"><span class="text-muted">Impuesto: </span> {{articulo.ind_impuesto}}</p>
                     <p class="mb-1"><span class="text-muted">Psicotrópico: </span> {{articulo.ind_psicotropico}}</p>
@@ -851,10 +851,9 @@
                 <div class="col-md-4 ">
                     <p class="font-weight-bold mb-4">Otros</p>
   
-                    <p class="mb-1"><span class="text-muted">Categoría: </span> {{articulo.categoria}}</p>
-                    <p class="mb-1"><span class="text-muted">Descuento 1: </span> {{articulo.descuento1}}</p>
-                    <p class="mb-1"><span class="text-muted">Descuento 2: </span> {{articulo.descuento2}}</p>
-  
+                    <p class="mb-1"><span class="text-muted">Categoría: </span> {{articulo.categoria}}/{{articulo.division}}</p>
+                    <!-- <p class="mb-1"><span class="text-muted">Descuento 1: </span> {{articulo.descuento1}}</p>
+                    <p class="mb-1"><span class="text-muted">Descuento 2: </span> {{articulo.descuento2}}</p>-->
                 </div>
   
             </div>
