--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -660,7 +660,7 @@
     <div class="modal-dialog mw-100  modal-90 modal-100-ht">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Productos</h4>
+          <h4 class="modal-title">Agregar productos</h4>
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closeModalProducts()" >&times;</button>
   
         </div>
@@ -684,7 +684,7 @@
                             Por producto
                           </option>
                           <option  value="2">
-                            Por componente activo
+                            Por principio activo
                           </option>
                         </select>
                       </div>
