--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -62,7 +62,7 @@
           <div class="form-check mb-3">
             <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusqueda" id="exampleRadios2" ng-value="1" >
             <label class="form-check-label" for="exampleRadios2">
-              Búsqueda por componente activo
+              Búsqueda por principio activo
             </label>
           </div>
 
