--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -62,7 +62,7 @@
             <p class="mb-1"   ng-if="client_info.grupo_cliente != '02'"  ><span class="text-muted">Vendedor: </span> {{client_info.vendedor.toLowerCase()}}</p>
             <p class="mb-1"   ng-if="client_info.grupo_cliente != '02'"  ><span class="text-muted">Email vendedor: </span> {{client_info.email_vendedor.toLowerCase()}}</p>
             <p class="mb-1"  ng-if="client_info.grupo_cliente != '02'" ><span class="text-muted">Analista de cobranzas: </span> {{client_info.v_persona_cyc.toLowerCase()}}</p>
-            <p class="mb-1"  ng-if="client_info.grupo_cliente != '02'" ><span class="text-muted">Email Analista: </span> {{client_info.email_persona_cyc.toLowerCase()}}</p>
+            <p class="mb-1"  ng-if="client_info.grupo_cliente != '02'" ><span class="text-muted">Email analista: </span> {{client_info.email_persona_cyc.toLowerCase()}}</p>
           </div>
         </div>
       </div>
