--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -32,7 +32,7 @@
             <p class="mb-1"><span class="text-muted">Dirección fiscal: </span> {{client_info.direccion_cliente}}</p>
             <!-- <p class="mb-1"><span class="text-muted">Zona: </span>{{client_info.zona}}</p> -->
             <!-- <p class="mb-1"><span class="text-muted">Telefono: </span>{{client_info.telefono1}}</p> -->
-            <!-- <p class="mb-1" ><span class="text-muted">Encargado: </span> {{client_info.nombre_encargado.toLowerCase()}}</p> -->
+            <!-- <p class="mb-1" style="text-transform: capitalize;"><span class="text-muted">Encargado: </span> {{client_info.nombre_encargado.toLowerCase()}}</p> -->
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
           <div class="card-body  " id="collapseDetalle" >
 
             <!-- <h6 class="card-title">Detalles del Cliente</h6> -->
-            <p class="mb-1"><span class="text-muted"> Código {{ (client_info.grupo_cliente == "02") ?  "de empleado:":"" }} </span> {{client_info.cod_cliente}}</p>
+            <p class="mb-1"><span class="text-muted"> Código{{ (client_info.grupo_cliente == "02") ?  " de empleado:":":" }} </span> {{client_info.cod_cliente}}</p>
             <p class="mb-1" ng-if="client_info.grupo_cliente =='02'" ><span class="text-muted"> Nombre empleado:</span> {{client_info.nombre_cliente}}</p>
             <p class="mb-1"><span class="text-muted">Tipo de venta: </span> {{client_info.tipo_venta}}</p>
             <p class="mb-1"><span class="text-muted">Plazo: </span> {{client_info.v_plazo}} días</p>
@@ -59,9 +59,9 @@
             <!-- <p class="mb-1" ng-if="client_info.grupo_cliente == '02'" ><span class="text-muted"  >Saldo en unidades: </span> {{client_info.unid_disp_med_emp}}</p> -->
             <p class="mb-1" ng-if="client_info.grupo_cliente == '02'" ><span class="text-muted"  >Disp. en medicinas: </span> {{client_info.unid_disp_med_emp}}</p>
             <p class="mb-1" ng-if="client_info.grupo_cliente == '02'" ><span class="text-muted"  >Disp. en misceláneos: </span> {{client_info.unid_disp_misc_emp}}</p>
-            <p class="mb-1"   ng-if="client_info.grupo_cliente != '02'"  ><span class="text-muted">Vendedor: </span> {{client_info.vendedor.toLowerCase()}}</p>
+            <p class="mb-1"   ng-if="client_info.grupo_cliente != '02'"  ><span class="text-muted">Vendedor: </span> <span style="text-transform: capitalize;">{{client_info.vendedor.toLowerCase()}}</span></p>
             <p class="mb-1"   ng-if="client_info.grupo_cliente != '02'"  ><span class="text-muted">Email vendedor: </span> {{client_info.email_vendedor.toLowerCase()}}</p>
-            <p class="mb-1"  ng-if="client_info.grupo_cliente != '02'" ><span class="text-muted">Analista de cobranzas: </span> {{client_info.v_persona_cyc.toLowerCase()}}</p>
+            <p class="mb-1"  ng-if="client_info.grupo_cliente != '02'" ><span class="text-muted">Analista de cobranzas: </span> <span style="text-transform: capitalize;">{{client_info.v_persona_cyc.toLowerCase()}}</span> </p>
             <p class="mb-1"  ng-if="client_info.grupo_cliente != '02'" ><span class="text-muted">Email analista: </span> {{client_info.email_persona_cyc.toLowerCase()}}</p>
           </div>
         </div>
