--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -852,14 +852,14 @@
                     <p class="font-weight-bold mb-4">Otros</p>
   
                     <p class="mb-1"><span class="text-muted">Categoría: </span> {{articulo.categoria}}</p>
-                    <p class="mb-1"><span class="text-muted">Division: </span> {{articulo.division}}</p>
+                    <p class="mb-1"><span class="text-muted">División: </span> {{articulo.division}}</p>
                     <!-- <p class="mb-1"><span class="text-muted">Descuento 1: </span> {{articulo.descuento1}}</p>
                     <p class="mb-1"><span class="text-muted">Descuento 2: </span> {{articulo.descuento2}}</p>-->
                 </div>
   
             </div>
   
-            <div id="infoProduct"  >
+            <div id="infoProduct" class="row" >
   
                 <div class="col-md-6 col-sm-12">
                   <div ng-if="editProduct">
