--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -698,7 +698,7 @@
                       ng-model="busqueda_prod"
                       ng-keydown="$event.keyCode === 13 && getProdNew(true)"
                       placeholder="Búsqueda por producto"
-                      aria-label="Búsqueda por Producto"
+                      aria-label="Búsqueda del Producto"
                       aria-describedby="basic-addon2">
                       <div class="input-group-append">
                         <button class="btn btn-outline-secondary"   ng-click="getProdNew(true)" type="button">Buscar</button>
