--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -94,7 +94,7 @@
             <div class="col-md-6">
               <label for="clientes">Búsqueda</label>
               <div class="input-group mb-3">
-                <input type="text" class="form-control" ng-keydown="$event.keyCode === 13 && getProdNew(true)" ng-model="busqueda_prod" placeholder="Búsqueda por Producto" aria-label="Búsqueda por Producto" aria-describedby="basic-addon2">
+                <input type="text" class="form-control" ng-keydown="$event.keyCode === 13 && getProdNew(true)" ng-model="busqueda_prod" placeholder="Búsqueda del Producto" aria-label="Búsqueda del Producto" aria-describedby="basic-addon2">
                 <div class="input-group-append">
                   <button class="btn btn-outline-secondary"   ng-click="getProdNew(true)" type="button">Buscar</button>
                 </div>
