--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -697,8 +697,8 @@
                       <input type="text" class="form-control"
                       ng-model="busqueda_prod"
                       ng-keydown="$event.keyCode === 13 && getProdNew(true)"
-                      placeholder="Búsqueda por producto"
-                      aria-label="Búsqueda del Producto"
+                      placeholder="Búsqueda del producto"
+                      aria-label="Búsqueda del producto"
                       aria-describedby="basic-addon2">
                       <div class="input-group-append">
                         <button class="btn btn-outline-secondary"   ng-click="getProdNew(true)" type="button">Buscar</button>
