--- a/app/comps/home/home.html
+++ b/app/comps/home/home.html
@@ -5,6 +5,7 @@
 
   </div>
 
+
   <div id="wrapper" class="toggled">
 
     <my-sidebar></my-sidebar>
@@ -27,6 +28,9 @@
 
           <div class="container-fluid">
 
+            <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalInfoProduct">
+              Launch demo modal
+            </button> -->
 
             </div>
 
