--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -833,7 +833,7 @@
           <div class="container">
             <nav aria-label="breadcrumb" role="navigation">
               <ol class="breadcrumb m-0">
-                <li class="breadcrumb-item"><a class="text-info" >{{articulo.categoria}}<</a></li>
+                <li class="breadcrumb-item"><a class="text-info" >{{articulo.categoria}}</a></li>
                 <li class="breadcrumb-item"><a class="text-info">{{articulo.division}}</a></li>
               </ol>
             </nav>
@@ -847,15 +847,16 @@
                   <div class="col-md-12" >
 
                     <h1 class="product-name cx-heading cx-brand-font bold larger">{{articulo.nombre_producto.toLowerCase()}}</h1>
+                    <small>{{articulo.princ_activo}}</small>
                   </div>
                   <div class="col-md-12" style="border-top: 1px solid #ccc;
                   padding-top: 10px;
                   margin-top: 10px;"  >
                     <!-- <span class="product-price-lowest">$44.99</span> -->
-                    <span class="product-price-lowest" >{{formato(2,(articulo.precio_neto_bs)? articulo.precio_neto_bs:0)}}</span>
+                    <span class="product-price-lowest text-right" >{{formato(2,(articulo.precio_neto_bs)? articulo.precio_neto_bs:0)}}</span>
                   </div>
                   <div class="col-md-12" >
-                    <span  class="product-price-lowest" >{{formato(3,(articulo.precio_neto_usd)? articulo.precio_neto_usd:0)}}</span>
+                    <span  class="product-price-lowest text-right" >{{formato(3,(articulo.precio_neto_usd)? articulo.precio_neto_usd:0)}}</span>
 
                   </div>
                 </div>
